WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109374
[chromium] Fix Android scrollbar size
https://bugs.webkit.org/show_bug.cgi?id=109374
Summary
[chromium] Fix Android scrollbar size
Alexandre Elias
Reported
2013-02-10 01:04:47 PST
[chromium] Fix Android scrollbar size
Attachments
Patch
(3.48 KB, patch)
2013-02-10 01:09 PST
,
Alexandre Elias
no flags
Details
Formatted Diff
Diff
Patch
(3.48 KB, patch)
2013-02-10 17:58 PST
,
Alexandre Elias
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.48 KB, patch)
2013-02-10 18:00 PST
,
Alexandre Elias
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alexandre Elias
Comment 1
2013-02-10 01:09:46 PST
Created
attachment 187469
[details]
Patch
Peter Beverloo (cr-android ews)
Comment 2
2013-02-10 01:21:47 PST
Comment on
attachment 187469
[details]
Patch
Attachment 187469
[details]
did not pass cr-android-ews (chromium-android): Output:
http://queues.webkit.org/results/16468789
James Robinson
Comment 3
2013-02-10 13:48:59 PST
Comment on
attachment 187469
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=187469&action=review
> Source/WebCore/platform/chromium/ScrollbarThemeChromiumAndroid.cpp:114 > + context->fillRect(centerRect, Color(128, 128, 128, 128), ColorSpaceDeviceRGB);
as EWS points out, this doesn't compile. What did you mean here instead of centerRect? thumbRect ?
James Robinson
Comment 4
2013-02-10 13:50:35 PST
Comment on
attachment 187469
[details]
Patch Could you just extend the thumb rect out very slightly to get some edge AA? R=me if you make it compile
Alexandre Elias
Comment 5
2013-02-10 17:58:07 PST
Created
attachment 187502
[details]
Patch Fix compile error (centerRect->thumbRect)
Alexandre Elias
Comment 6
2013-02-10 18:00:24 PST
Created
attachment 187503
[details]
Patch for landing
Alexandre Elias
Comment 7
2013-02-10 18:12:08 PST
Just saw your edge AA comment. Tien-Ren is reimplementing this to use SolidColorQuad (since scrollbar texture management is proving a pain) so let's revisit there.
WebKit Review Bot
Comment 8
2013-02-10 18:55:52 PST
Comment on
attachment 187503
[details]
Patch for landing Clearing flags on attachment: 187503 Committed
r142423
: <
http://trac.webkit.org/changeset/142423
>
WebKit Review Bot
Comment 9
2013-02-10 18:55:55 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug