[chromium] Fix Android scrollbar size https://bugs.webkit.org/show_bug.cgi?id=109374

Reviewed by James Robinson.

This shrinks scrollbars to 3 device-independent pixels (usually 6
physical pixels) and deletes the edge fade. Although the Android
system theme does have an edge fade, it's a much sharper cliff
than we had (against black, the colors go 64 -> 64 -> 52 -> 21 -> 0)
and I can't perceive any difference compared with no fade at all.

No new tests (due for rewrite in a week anyway).

* platform/chromium/ScrollbarThemeChromiumAndroid.cpp:
(WebCore):
(WebCore::ScrollbarThemeChromiumAndroid::paintThumb):


Canonical link: https://commits.webkit.org/127664@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142423 268f45cc-cd09-0410-ab3c-d52691b4dbfc